<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">TermCalc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_menu_item">Home</string>
    <string name="date_menu_item">Date Calculator</string>
    <string name="dec_frac_menu_item">Decimal to Fraction</string>
    <string name="term_menu_item">Theme</string>
    <string name="conversions_menu_item">Conversions</string>
    <string name="about_menu_item">About</string>
    <string name="configuration_menu_header">Personalization</string>
    <string name="other_menu_header">Other</string>
    <string name="history">History</string>
    <string name="changelog">Changelog</string>
    <string name="theme_settings">Settings</string>
    <string name="current_changes" translatable="false" tools:ignore="TypographyDashes">
        1. Redesigned the Theme Editor (again). You can now switch between square buttons and rounded buttons!
        \n2. All themes are treated as custom themes now. This essentially just means that changing your accent color will now also affect your custom theme.
        \n3. The Settings and Advanced Options sections will now be themed according to your Accent Color. The text cursors in most layouts will also now use this color.
        \n4. While typing on the Home screen, the result of your expression will now be calculated as you type it!\n
        Note: This behavior can be disabled in settings.
        \n5. The new input method is now finally out of beta! You can now tap an expression on the home screen to go back and edit it from any point. This also means a cursor will now always be shown on the Home screen.
        \n6. Switched from double to BigDecimal precision, which should improve the accuracy of calculations involving multiple numbers with many decimal places.
        \n7. The \"Functions\" section has been redesigned to make evaluating functions more convenient.
        \n8. The entire app is now available in Spanish and Italian! Big thanks to Lorenzo Vainigli on GitHub for adding Italian translations!
        \n9. The equals/clear animation is now a bit smoother.
        \n10. The changelog will now display one more previous version.
        \n11. Added support for Android 13\'s \"Themed Icons\" feature.
        \n12. Optimized more layouts for smaller devices.
        \n13. Many bug fixes and performance improvements.

    </string>
    <string name="version">Version</string>
    <string name="previous_version" translatable="false">13.0.1</string>
    <string name="previous_changes" translatable="false" tools:ignore="TypographyDashes">
        1. Fixed a bug that caused some button text colors to not properly reset after selecting \"Reset to Defaults\" in the Theme Editor.
        \n2. Added the \"sym\" command to the terminal\'s help text.
        \n3. Minor bug fixes and performance improvements.

    </string>
    <string name="before_previous_version" translatable="false">13.0.0</string>
    <string name="before_previous_changes" translatable="false" tools:ignore="TypographyDashes">
        1. Completely redesigned the Theme Editor! Editing themes is now much easier.
        \n2. Importing themes saved using version 13.0.0 and onward will no longer require you to enter a theme name, nor will these themes occasionally import with automatically-populated incorrect names.
        \n3. You can now make the color of the button above the delete button different from the delete button\'s color.
        \n4. Changed the modulus symbol from \"%\" to \"mod\" to avoid confusion. If you would like to change back to the \"%\" symbol, simply type \"sym -mod \"%\"\" in the terminal.\n
        Note: This button will always input \"%\" into the current expression when pressed, regardless of its symbol.
        \n5. You can now choose whether the top bar tab is darkened or not in \"Advanced Options.\"
        \n6. Removed the \"backup\" and \"restore\" commands from the terminal, as they were broken and using the new editor for these functions is much easier anyway.
        \n7. Made a few slight changes to how themes are interpreted under the hood. As a result, some older themes may need to be updated to support version 13.0.0 and above (simply restore each old theme, edit any incorrect colors, then save the theme again).
        \n8. Fixed a bug that prevented some button colors from changing when resetting a theme back to default.
        \n9. A ton of bug fixes for tablets and foldables.
        \n10. Fixed multiple bugs related to the \"Date Calculator\" section.
        \n11. The \"debug stack\" command will now work even after the application is restarted.\n
        Note: Crash reports will still be cleared after two restarts.
        \n12. Many other minor bug fixes and performance improvements.

    </string>
    <string name="before_previous_version2" translatable="false">12.2.0</string>
    <string name="before_previous_changes2" translatable="false" tools:ignore="TypographyDashes">
        1. You can now assign shortcuts to any of your saved Custom Constants! Try out the new feature by tapping the three dots on any constant\'s card.
        \n2. Various bug fixes.

    </string>
    <string name="before_previous_version3" translatable="false">12.1.7</string>
    <string name="before_previous_changes3" translatable="false" tools:ignore="TypographyDashes">
        1. Fixed a very rare crash that could occur when changing theme settings under very specific circumstances.

    </string>
    <string name="before_previous_version4" translatable="false">12.1.6</string>
    <string name="before_previous_changes4" translatable="false" tools:ignore="TypographyDashes">
        1. Fixed a bug that would cause buttons to display incorrectly in landscape layouts.
        \n2. Other minor bug fixes.

    </string>
    <string name="termHash" translatable="false"><![CDATA[</:]]></string>
    <string name="rad" translatable="false">RAD</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="scientific_calculator">Scientific Calculator</string>
    <string name="domain_error">Domain Error</string>
    <string name="parse_error">Parse Error</string>
    <string name="error_nan">NaN</string>
    <string name="help_text" translatable="false">\n\nCurrently supported commands:\n
         • help - prints all available commands\n
        *Note: You can type \"help [command]\" to learn more about a particular command.\nExample: \"help set\"\n
         • set [button code] [color hex] - sets a color in the current theme\n
         • get [button code] - prints a color in the current theme\n
         • sym -mod [any text] - sets the text of the \"mod\" button\n
         • reset [button code] - resets a color in the current theme to its default value\n
         • copy [button code] - copies a color in the current theme to the device\'s clipboard\n
         • share [theme name] - export a theme\n
         • mode [theme number] - changes the current base theme\n
         • delete [theme name] - deletes the selected custom theme\n
         • recreate - restarts the home layout (mostly used for development testing)\n
         • themes - lists all backed up themes

    </string>
    <string name="firstCont" translatable="false">Odalys (@sleepyhead)</string>
    <string name="contDesc1" translatable="false">
    Proofreading, spanish translations, moral support
    </string>
    <string name="secondCont" translatable="false">Chris (@Quetzhal)</string>
    <string name="contDesc2" translatable="false">
    Helped me find, and fix, a TON of bugs
    </string>
    <string name="constants">Constants</string>
    <string name="functions">Functions</string>
    <string name="geometry">Geometry</string>
    <string name="area">AREA</string>
    <string name="volume">VOLUME</string>
    <string name="surface_area">SURFACE AREA</string>
    <string name="theme_nav_summary">Apply the colors in your theme to the nav drawer.</string>
    <string name="focus_summary">Hides system bars to minimize distraction.</string>
    <string name="help">Help</string>
    <string name="cube">Cube</string>
    <string name="rectangular_prism">Rectangular Prism</string>
    <string name="sphere">Sphere</string>
    <string name="hemisphere">Hemisphere</string>
    <string name="triangular_prism">Triangular Prism</string>
    <string name="pyramid_triangular_base">Pyramid (Triangular Base)</string>
    <string name="pyramid_rectangular_base">Pyramid (Rectangular Base)</string>
    <string name="pentagonal_prism">Pentagonal Prism</string>
    <string name="cone">Cone</string>
    <string name="cylinder">Cylinder</string>
    <string name="regular_octahedron">Regular Octahedron</string>
    <string name="dodecahedron">Dodecahedron</string>
    <string name="torus">Torus</string>
    <string name="mass_micrograms">Micrograms</string>
    <string name="mass_milligrams">Milligrams</string>
    <string name="mass_centigrams">Centigrams</string>
    <string name="mass_grams">Grams</string>
    <string name="mass_kilograms">Kilograms</string>
    <string name="mass_ounces">Ounces</string>
    <string name="mass_pounds">Pounds</string>
    <string name="mass_newtons">Newtons</string>
    <string name="mass_stones">Stones</string>
    <string name="time_nanoseconds">Nanoseconds</string>
    <string name="time_microseconds">Microseconds</string>
    <string name="time_milliseconds">Milliseconds</string>
    <string name="time_seconds">Seconds</string>
    <string name="time_minutes">Minutes</string>
    <string name="time_hours">Hours</string>
    <string name="time_days">Days</string>
    <string name="time_weeks">Weeks</string>
    <string name="volume_milliliters">Milliliters</string>
    <string name="volume_liters">Liters</string>
    <string name="volume_cubic_meters">Cubic Meters</string>
    <string name="volume_ounces">Ounces</string>
    <string name="volume_cups">Cups</string>
    <string name="volume_pints">Pints</string>
    <string name="volume_quarts">Quarts</string>
    <string name="volume_gallons">Gallons</string>
    <string name="always_dark_nav">Always set the nav drawer to dark mode.</string>
    <string name="darken_status_bar">Darken the status bar slightly when using a custom dark theme.</string>
    <string name="darken_tab">Slightly darken the tab above the top bar.</string>
    <string name="dynamic_precision_description">Let TermCalc determine the number of decimal places to display based on your input.</string>
    <string name="max_decimals_description">Note: Some complex operations may take noticeably longer to complete if this value is greater than 10.</string>
    <string name="live_expression_description">Calculate and display expression results before pressing the equals button.</string>
    <string name="ignore_pemdas_description">Ignore PEMDAS and prioritize evaluating coefficients in front of parentheses.\n(WARNING: Only enable this if you know what you\'re doing! Enabling this can yield incorrect calculation results)</string>
    <string name="dynamic_precision">Dynamic Precision</string>
    <string name="max_decimal_places">Maximum Decimal Places</string>
    <string name="focus_mode">Focus Mode</string>
    <string name="show_constants_functions">Show Custom Constants/Functions</string>
    <string name="live_expression_eval">Live Expression Evaluation</string>
    <string name="exchange_rate_frequency_title">When to Fetch Exchange Rates</string>
    <string name="prioritize_coefficients_title">Prioritize Coefficients</string>
    <string name="settings_title_general">General</string>
    <string name="settings_title_appearance">Appearance</string>
    <string name="settings_title_data_usage">Data Usage</string>
    <string name="settings_title_advanced">Advanced</string>
</resources>