<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings_title_general">

        <SwitchPreference
            android:title="@string/dynamic_precision"
            android:summary="@string/dynamic_precision_description"
            android:key="isDynamic"
            android:disableDependentsState="true"
            android:icon="@drawable/ic_baseline_auto_awesome_24"
            android:defaultValue="true"/>

        <SeekBarPreference
            android:title="@string/max_decimal_places"
            android:summary="@string/max_decimals_description"
            android:defaultValue="9"
            android:dependency="isDynamic"
            android:max="17"
            app:min="1"
            android:shouldDisableView="true"
            android:key="precision"
            app:showSeekBarValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_title_appearance">

        <SwitchPreference
            android:title="@string/focus_mode"
            android:summary="@string/focus_summary"
            android:key="isFocus"
            android:icon="@drawable/ic_baseline_do_not_disturb_on_24"
            android:defaultValue="false"/>

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/customs_locations"
            android:entryValues="@array/custom_fab_values"
            android:key="whereCustom"
            app:icon="@drawable/ic_function"
            app:title="@string/show_constants_functions"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:title="@string/live_expression_eval"
            android:summary="@string/live_expression_description"
            android:key="showPreviousExpression"
            android:icon="@drawable/ic_baseline_history_24"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_title_data_usage">

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/exchange_rate_frequency_options"
            android:entryValues="@array/currency_values"
            android:key="fetchRate"
            app:icon="@drawable/ic_baseline_signal_cellular_alt_24"
            app:title="@string/exchange_rate_frequency_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_title_advanced">

        <SwitchPreference
            android:title="@string/prioritize_coefficients_title"
            android:summary="@string/ignore_pemdas_description"
            android:key="prioritizeCoefficients"
            android:icon="@drawable/ic_round_warning_24"
            android:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>