<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/square"
        android:orderInCategory="0"
        android:title="@string/time_nanoseconds"
        app:showAsAction="never"/>

    <item
        android:id="@+id/rectangle"
        android:orderInCategory="1"
        android:title="@string/time_microseconds"
        app:showAsAction="never"/>

    <item
        android:id="@+id/circle"
        android:orderInCategory="2"
        android:title="@string/time_milliseconds"
        app:showAsAction="never"/>

    <item
        android:id="@+id/ellipse"
        android:orderInCategory="3"
        android:title="@string/time_seconds"
        app:showAsAction="never"/>

    <item
        android:id="@+id/triangle"
        android:orderInCategory="4"
        android:title="@string/time_minutes"
        app:showAsAction="never"/>

    <item
        android:id="@+id/trapezoid"
        android:orderInCategory="5"
        android:title="@string/time_hours"
        app:showAsAction="never"/>

    <item
        android:id="@+id/Parallelogram"
        android:orderInCategory="6"
        android:title="@string/time_days"
        app:showAsAction="never"/>

    <item
        android:id="@+id/pentagon"
        android:orderInCategory="7"
        android:title="@string/time_weeks"
        app:showAsAction="never"/>

</menu>