<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/square"
        android:orderInCategory="0"
        android:title="@string/volume_milliliters"
        app:showAsAction="never"/>

    <item
        android:id="@+id/rectangle"
        android:orderInCategory="1"
        android:title="@string/volume_liters"
        app:showAsAction="never"/>

    <item
        android:id="@+id/circle"
        android:orderInCategory="2"
        android:title="@string/volume_cubic_meters"
        app:showAsAction="never"/>

    <item
        android:id="@+id/ellipse"
        android:orderInCategory="3"
        android:title="@string/volume_ounces"
        app:showAsAction="never"/>

    <item
        android:id="@+id/triangle"
        android:orderInCategory="4"
        android:title="@string/volume_cups"
        app:showAsAction="never"/>

    <item
        android:id="@+id/trapezoid"
        android:orderInCategory="5"
        android:title="@string/volume_pints"
        app:showAsAction="never"/>

    <item
        android:id="@+id/Parallelogram"
        android:orderInCategory="6"
        android:title="@string/volume_quarts"
        app:showAsAction="never"/>

    <item
        android:id="@+id/pentagon"
        android:orderInCategory="7"
        android:title="@string/volume_gallons"
        app:showAsAction="never"/>

</menu>