<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/history"
        android:orderInCategory="103"
        android:title="@string/history"
        app:showAsAction="never"/>

    <item
        android:id="@+id/constants"
        android:orderInCategory="104"
        android:title="@string/constants"
        app:showAsAction="never"/>

    <item
        android:id="@+id/functions"
        android:orderInCategory="105"
        android:title="@string/functions"
        app:showAsAction="never"/>

    <item
        android:id="@+id/help"
        android:orderInCategory="106"
        android:title="@string/help"
        app:showAsAction="never"/>
</menu>