<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/geoMainBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkColorPrimary"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/geoTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/geoToolbar">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/areaTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/volumeTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/saTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surface_area" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/jumpTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_baseline_swap_vert_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/geoRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/geoTabs" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/geoToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/DarkTheme.PopupOverlay" />


</androidx.constraintlayout.widget.ConstraintLayout>