<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contributorsMainBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkColorPrimary"
    tools:context=".Contributors">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/contributorsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/darkColorPrimaryDark"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contributorsToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/ic_terry"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                android:visibility="gone"
                app:cardCornerRadius="40dp"
                app:layout_constraintBottom_toBottomOf="@+id/contDesc1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/firstCont">

                <ImageView
                    android:id="@+id/img_terry"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ic_quetz"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                android:visibility="gone"
                app:cardCornerRadius="40dp"
                app:layout_constraintBottom_toBottomOf="@+id/contDesc2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/secondCont">

                <ImageView
                    android:id="@+id/img_quetz"
                    android:layout_width="match_parent"
                    android:layout_height="55.5dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/firstCont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/firstCont"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/ic_terry"
                app:layout_constraintTop_toBottomOf="@+id/contributorsTitle" />

            <TextView
                android:id="@+id/contDesc1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:ellipsize="end"
                android:text="@string/contDesc1"
                android:textColor="#CCCCCC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_terry"
                app:layout_constraintTop_toBottomOf="@+id/firstCont" />

            <TextView
                android:id="@+id/secondCont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/secondCont"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/ic_quetz"
                app:layout_constraintTop_toBottomOf="@+id/contDesc1" />

            <TextView
                android:id="@+id/contDesc2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/contDesc2"
                android:textColor="#CCCCCC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_quetz"
                app:layout_constraintTop_toBottomOf="@+id/secondCont" />

            <TextView
                android:id="@+id/contributorsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="Direct Contributors"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>